# Phishing-Detection-and-Prevention

./: .env.example  .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_training.py
backend/: __init__.py
backend/analysis_layer/: __init__.py  domain_profiler.py
backend/api_gateway/: config.py  main.py
backend/core/: __init__.py
backend/detection_engine/: __init__.py  cnn_model.py  ensemble.py  gnn_model.py  main_engine.py  nlp_model.py  url_analyzer.py
backend/detectors/: __init__.py  email_detector.py  image_detector.py  (+2 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: config.py
extension/: manifest.json
frontend/: index.html  package.json
infrastructure/: database_init.sql
model_training/: export_edge_models.py  train_advanced_model.py  train_ai_text_detector.py  train_all_models.py  train_clip_brand.py  train_cnn_model.py  train_codebert_html.py  train_deberta_url.py  train_efficientnet_visual.py  train_gat_bec.py  train_gnn_model.py  train_layoutlm_login.py  train_mdeberta_sms.py  train_meta_learner.py  train_nlp_model.py  train_phishbert_email.py  train_securebert_sms.py  train_setfit_sms.py  train_steg_cnn.py  train_tgt.py  train_ultimate_model.py  train_url_model.py  train_url_model_advanced.py  train_url_model_ultimate.py  train_urlnet.py  train_xgboost_url.py  train_yolov8_qr.py
tests/: conftest.py
(+175 files in other folders)
